# flood-risk-zonation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_chennai.py  write_wb_module.py
.github/workflows/: test.yml
.streamlit/: config.toml
data/drainage_lines/: gottigere_drains.geojson
data/elevation/: chennai_srtm.tif  gottigere_srtm.tif
data/water_bodies/: gottigere_water.geojson  wb_74.8300_34.0700_74.9000_34.1400.geojson  wb_77.5500_12.8400_77.6200_12.9100.geojson  wb_80.2400_12.9800_80.3100_13.0500.geojson
flood_risk_zonation/: __init__.py  config.py  exceptions.py  models.py  pipeline.py
flood_risk_zonation/features/: extractor.py  hydrological.py  rainfall_features.py  terrain.py
flood_risk_zonation/grid/: __init__.py  generator.py
flood_risk_zonation/ingest/: __init__.py  drainage.py  elevation.py  population.py  rainfall.py  sample_data.py  water_bodies.py
flood_risk_zonation/model/: __init__.py  predictor.py  trainer.py
flood_risk_zonation/scoring/: __init__.py  scorer.py  susceptibility.py
flood_risk_zonation/utils/: cache.py  crs.py  validation.py
flood_risk_zonation/visualization/: explainability.py  export.py  layers.py  map_builder.py  pdf_report.py
scripts/: check_cache.py  check_fix.py  diagnose_map.py  fetch_bangalore_wb.py  inspect_map_html.py  verify_hover.py
tests/: test_chennai.py
tests/integration/: test_app.py  test_export.py  test_model_training.py  test_pipeline.py  test_reference_regions.py
tests/property/: test_distance_to_water.py  test_feature_extraction.py  test_grid_coverage.py  test_imputation.py  test_invalid_input_rejection.py  test_model_serialization.py  test_pipeline.py  test_predict_proba.py  test_twi.py  (+3 more)
(+15 files in other folders)
